--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <div id="game">
     <h1>Text Adventure</h1>
     <div id="room-description"></div>
+    <div id="items"></div>
+    <div id="inventory">Inventory: Empty</div>
 
     <div id="compass">
       <div class="row">
